--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
   datasource:
-    url: jdbc:mysql://localhost:3306/order_db
+    url: jdbc:mysql://localhost:3306/orders_db
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
